<resources>
    <string name="app_name">My Application perpustakaan</string>
    <string name="image">image</string>
    <string name="nama">nama</string>
    <string name="sulthan_hakiim">Sulthan Hakiim</string>
    <string name="no_hp">No HP</string>
    <string name="_085742454599">085742454599</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
</resources>
